Added api back end and front end service for adding new img

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -67,9 +67,11 @@
     <!-- Controllers --> 
     <script src="/public/app/controllers/HomeController.js"></script>
     <script src="/public/app/controllers/ProfileController.js"></script>
+    <script src="/public/app/controllers/User_ImgAddController.js"></script>
     
     <!-- Services -->
     <script src="/public/app/services/user.js"></script>
+    <script src="/public/app/services/imgs.js"></script>
     
 </body>
 </html>
