Add image view and form added

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -34,8 +34,7 @@
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text"></h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#/"><i class="fa fa-home"></i> Home</a></li>
-            <li><a class="grey-text text-lighten-3" href="#/login"><i class="fa fa-sign-in"></i> Log In</a></li>
+            <li><a class="grey-text text-lighten-3" href="#/add"><i class="fa fa-plus"></i> Add Image</a></li>
           </ul>
         </div>
       </div>
