Added all images api and front end

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -68,7 +68,7 @@
     <script src="/public/app/controllers/HomeController.js"></script>
     
     <!-- Services -->
-
+    <script src="/public/app/services/imgs.js"></script>
     
 </body>
 </html>
