--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -7,7 +7,7 @@
 </head>
 <body ng-app="FinterestApp">
   
-  <a id="btn-navright" class="btn-floating btn-flat btn-large waves-effect waves-light blue lighten-2" style="top: 0px; right: 0px;" href="#/login"><i class="fa fa-sign-in"></i> Log In</a>
+  <a id="btn-navright" class="btn-floating btn-flat btn-large waves-effect waves-light blue lighten-2" style="top: 0px; right: 0px;" href="#/profile"><i class="fa fa-user"></i> Profile</a>
     
   <main>
   
