Updated link to my images

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -35,6 +35,7 @@
           <h5 class="white-text"></h5>
           <ul>
             <li><a class="grey-text text-lighten-3" href="#/add"><i class="fa fa-plus"></i> Add Image</a></li>
+            <li><a class="grey-text text-lighten-3" href="#/images/my"><i class="fa fa-plus"></i> My Images</a></li>
           </ul>
         </div>
       </div>
