--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -5,10 +5,20 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 <link rel="stylesheet" type="text/css" href="/public/css/style.css"/>
 </head>
-<body ng-app="FinterestApp">
+<body ng-app="FinterestApp" class="loggedinbody">
   
-  <a id="btn-navright" class="btn-floating btn-flat btn-large waves-effect waves-light blue lighten-2" style="top: 0px; right: 0px;" href="#/profile"><i class="fa fa-user"></i> Profile</a>
-    
+  <div class="navbar-fixed">
+    <nav class="blue">
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo">Logo</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#/profile"><i class="fa fa-user"></i> Profile</a></li>
+          <li><a href="badges.html">Components</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  
   <main>
   
   <div class="container-fluid" id="page-wrap">
@@ -67,6 +77,7 @@
     <!-- Controllers --> 
     <script src="/public/app/controllers/HomeController.js"></script>
     <script src="/public/app/controllers/ProfileController.js"></script>
+    <script src="/public/app/controllers/User_ImgMyController.js"></script>
     <script src="/public/app/controllers/User_ImgAddController.js"></script>
     
     <!-- Services -->
