Updated logged in menu

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -10,10 +10,11 @@
   <div class="navbar-fixed">
     <nav class="blue">
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Logo</a>
+        <a href="#/front" class="brand-logo">Finterest</a>
         <ul class="right hide-on-med-and-down">
+          <li><a href="#/images/my"><i class="fa fa-camera"></i> My Images</a></li>
+          <li><a href="#/add"><i class="fa fa-plus"></i> Add Image</a></li>
           <li><a href="#/profile"><i class="fa fa-user"></i> Profile</a></li>
-          <li><a href="badges.html">Components</a></li>
         </ul>
       </div>
     </nav>
@@ -45,7 +46,8 @@
           <h5 class="white-text"></h5>
           <ul>
             <li><a class="grey-text text-lighten-3" href="#/add"><i class="fa fa-plus"></i> Add Image</a></li>
-            <li><a class="grey-text text-lighten-3" href="#/images/my"><i class="fa fa-plus"></i> My Images</a></li>
+            <li><a class="grey-text text-lighten-3" href="#/images/my"><i class="fa fa-camera"></i> My Images</a></li>
+            <li><a class="grey-text text-lighten-3" href="#/profile"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
         </div>
       </div>
