Updated logged in footer

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -39,7 +39,7 @@
         <div class="col l6 s12">
           <h5 class="blue-text text-lighten-2">About</h5>
           <p class="blue-text text-lighten-2">FINterest is a place in the sea you can save and share your favourite pictures.</p>
-          <p class="blue-text text-lighten-2">Log in to add pictures and create your own wave of pictures.</p>
+          <p class="blue-text text-lighten-2">Add pictures and create your own wave of pictures.</p>
           <p class="blue-text text-lighten-2">© 2016 Built by Codemzy</p>
         </div>
         <div class="col l4 offset-l2 s12">
