Updated footer links color

--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -54,7 +54,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container center-align">
-      <div class="blue-text text-lighten-2 center-align"><a href="https://www.twitter.com/codemzy" target="_blank"><i class="fa fa-twitter"></i> Twitter</a> | 
+      <div class="blue-text center-align"><a href="https://www.twitter.com/codemzy" target="_blank"><i class="fa fa-twitter"></i> Twitter</a> | 
         <a href="https://github.com/codemzy" target="_blank"><i class="fa fa-github"></i> GitHub</a> | 
         <a href="https://codemzy.github.io" target="_blank"><i class="fa fa-th"></i> Portfolio<a></div>
       </div>
