--- a/public/app/loggedin.html
+++ b/public/app/loggedin.html
@@ -4,6 +4,7 @@
 <title>FINterest App - by codemzy</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 <link rel="stylesheet" type="text/css" href="/public/css/style.css"/>
+<link rel="shortcut icon" type="image/x-icon" href="/public/img/favicon.ico">
 </head>
 <body ng-app="FinterestApp" class="loggedinbody">
   
